--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-app-template",
+  "name": "image-finder",
   "version": "0.1.0",
-  "homepage": "https://alex-neveroff.github.io/react-app-template/",
+  "homepage": "https://alex-neveroff.github.io/goit-react-hw-04-images/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
